Refactor gallery section to remove captions and update comments; restore hero section with content and buttons

--- a/gallery.html
+++ b/gallery.html
@@ -47,55 +47,45 @@
        - Provide good alt text for accessibility
        ===================================================================== -->
   <div class="gallery-grid" id="galleryGrid">
-    <!-- Each gallery item: image + caption — Add / remove items anytime -->
+    <!-- Each gallery item: image only — Add / remove items anytime -->
     <figure class="gallery-item">
       <img src="assets/gallery/Breads.jpg" alt="Fresh baked breads" loading="lazy">
-      <figcaption>Breads</figcaption>
     </figure>
 
     <figure class="gallery-item">
       <img src="assets/gallery/WhiteBread.jpg" alt="White bread loaves" loading="lazy">
-      <figcaption>White Bread</figcaption>
     </figure>
 
     <figure class="gallery-item">
       <img src="assets/gallery/CinnamonRolls.jpg" alt="Cinnamon rolls with frosting" loading="lazy">
-      <figcaption>Cinnamon Rolls</figcaption>
     </figure>
 
     <figure class="gallery-item">
       <img src="assets/gallery/Brownies.jpg" alt="Fudgy brownies" loading="lazy">
-      <figcaption>Brownies</figcaption>
     </figure>
 
     <figure class="gallery-item">
       <img src="assets/gallery/ChocolateChip.jpg" alt="Chocolate chip cookies" loading="lazy">
-      <figcaption>Chocolate Chip Cookies</figcaption>
     </figure>
 
     <figure class="gallery-item">
       <img src="assets/gallery/SugarCookies.jpg" alt="Decorated sugar cookies" loading="lazy">
-      <figcaption>Decorated Sugar Cookies</figcaption>
     </figure>
 
     <figure class="gallery-item">
       <img src="assets/gallery/Poppyseed.jpg" alt="Lemon poppyseed loaf" loading="lazy">
-      <figcaption>Lemon Poppyseed</figcaption>
     </figure>
 
     <figure class="gallery-item">
       <img src="assets/gallery/Macadamia.jpg" alt="White chocolate macadamia cookies" loading="lazy">
-      <figcaption>Macadamia Cookies</figcaption>
     </figure>
 
     <figure class="gallery-item">
       <img src="assets/gallery/ChocChipBread.jpg" alt="Chocolate chip bread loaf" loading="lazy">
-      <figcaption>Chocolate Chip Bread</figcaption>
     </figure>
 
     <figure class="gallery-item">
       <img src="assets/gallery/Croissants.jpg" alt="Croissants" loading="lazy">
-      <figcaption>Croissants</figcaption>
     </figure>
   </div>
 </main>
