Update gallery image: replace Peanut Butter Blossoms with Birthday Cake

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <img src="assets/gallery/Breads.jpg" alt="Fresh baked breads" loading="lazy">
         <img src="assets/gallery/CinnamonRolls.jpg" alt="Cinnamon rolls with icing" loading="lazy">
         <img src="assets/gallery/ChocolateChip.jpg" alt="Chocolate chip cookies" loading="lazy">
-        <img src="assets/gallery/PeanutButter.jpg" alt="Peanutbutter blossoms" loading="lazy">
+        <img src="assets/gallery/brithdaycake.jpg" alt="Birthday cake" loading="lazy">
     </div>
 
     <!-- Call-to-action to view the full gallery -->
