updated hero section

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 <div class="hero-left">
 <h1>In It for the Dough</h1>
 <p class="tagline">
-I'm just a mom turning a passion for baking into something special. From fresh baked breads to desserts and all-around delicious food, everything I make is baked with love.
+Welcome to In It for the Dough! I am a home baker who can make you love desserts all over again while still feeling good about yourself when eating them.
 <br><br>
-I truly love baking and feeding people — let me feed you! You won't be disappointed.
+ From cookies to breads to cakes and more, let me help make your next event the best it can be.
 </p>
 </div>
 
